tests/integration/snapshots/tests__integration__semantics__assigning_context.snap
---
source: tests/integration/semantics.rs
expression: out
---
[
    Diagnostic {
        inner: DiagnosticInner {
            message: "`context.` variables are read-only",
            labels: Some(
                [
                    LabeledSpan {
                        label: None,
                        span: SourceSpan {
                            offset: SourceOffset(
                                0,
                            ),
                            length: 15,
                        },
                        primary: false,
                    },
                ],
            ),
            help: Some(
                "Try assigning to `variable.` or `temp.` instead",
            ),
            severity: Error,
        },
    },
]
