tests/integration/snapshots/tests__integration__semantics__illegal_string_operation_both.snap
---
source: tests/integration/semantics.rs
expression: out
---
[
    Diagnostic {
        inner: DiagnosticInner {
            message: "Strings only support `==` and `!=` operators",
            labels: Some(
                [
                    LabeledSpan {
                        label: None,
                        span: SourceSpan {
                            offset: SourceOffset(
                                0,
                            ),
                            length: 13,
                        },
                        primary: false,
                    },
                ],
            ),
            help: None,
            severity: Error,
        },
    },
]
